// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<ds-error-summary
  aria-labelledby="mmexwp4azzy1"
  tabindex="-1"
>
  <h2 id="mmexwp4azzy1">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Fødselsdato kan ikke være etter år 2005
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        E-post må være gyldig
      </a>
    </li>
  </ul>
</ds-error-summary>
`;

exports[`With Form 1`] = `
<ds-field>
  <label data-weight="medium">
    Fornavn
  </label>
  <div>
    <input
      aria-invalid="true"
      id="fornavn"
      type="text"
    >
  </div>
  <p data-field="validation">
    Fornavn må være minst 2 tegn
  </p>
</ds-field>
<ds-field>
  <label data-weight="medium">
    Telefon
  </label>
  <div>
    <input
      aria-invalid="true"
      id="telefon"
      type="tel"
    >
  </div>
  <p data-field="validation">
    Telefonnummer kan kun inneholde siffer
  </p>
</ds-field>
<ds-error-summary
  aria-labelledby="mmexwp4azzy2"
  tabindex="-1"
>
  <h2 id="mmexwp4azzy2">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</ds-error-summary>
`;
